<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌上西大</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">我的主页</string>
    <string name="news">校园动态</string>
    <string name="xiaoyuankuaixun">校园快讯</string>
    <string name="zhongyaozixun">重要资讯</string>
    <string name="xidaxueren">西大学人</string>
    <string name="chengcaixida">成才西大</string>
    <string name="yuanwangye">原网页</string>
    <string name="about_xida">关于西大</string>
    <string name="xueyaunzhuye">学院主页</string>
    <string name="lib_news">图书馆通知</string>
    <string name="about_us">关于我们</string>
    <string name="us">西大Android客户端开发小组</string>
    <string name="rights">西大Android客户端开发小组 版权所有</string>
    <string name="my_weibo">新浪微博 @drawable</string>

</resources>