<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water_wood_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <include
            android:layout_width="match_parent"
            android:layout_height="35dp"
            layout="@layout/news_detail_header" >
        </include>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newstitle_ly"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/header_layout" >

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/water" />

        <TextView
            android:id="@+id/news_title"
            style="@style/news_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="7dp"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newstitle_ly" >

        <View style="@style/detail_cut_line" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line_ly" >

        <TextView
            android:id="@+id/news_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textColor="@android:color/background_dark"
            android:textIsSelectable="true"
            android:textSize="18sp" />
    </ScrollView>
    <Button
        android:id="@+id/yuan_web"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/yuanwangye" />
</RelativeLayout>