<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dip"
    android:background="@drawable/foot_bar_bg"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/bottom_home_layout"
        android:layout_width="64dip"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="2dip"
        android:layout_weight="1"
        android:background="@drawable/home_icon_style"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/home_icon"
            android:layout_width="28dip"
            android:layout_height="28dip"
            android:layout_gravity="center"
            android:background="@drawable/home_icon_sn_style" />

        <TextView
            android:id="@+id/home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingTop="1dip"
            android:text="@string/home"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_news_layout"
        android:layout_width="64dip"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dip"
        android:layout_weight="1"
        android:background="@drawable/news_icon_style"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/news_icon"
            android:layout_width="28dip"
            android:layout_height="28dip"
            android:layout_gravity="center"
            android:background="@drawable/news_icon_sn_style" />

        <TextView
            android:id="@+id/news_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingTop="2dip"
            android:text="@string/news"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_lib_news_layout"
        android:layout_width="64dip"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dip"
        android:layout_weight="1"
        android:background="@drawable/news_icon_style"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/libnews_icon"
            android:layout_width="28dip"
            android:layout_height="28dip"
            android:layout_gravity="center"
            android:background="@drawable/libnews_icon_sn_style" />

        <TextView
            android:id="@+id/libnews_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingTop="2dip"
            android:text="@string/lib_news"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_about_xiada_layout"
        android:layout_width="64dip"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dip"
        android:layout_weight="1"
        android:background="@drawable/home_icon_style"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/about_xida_im"
            android:layout_width="28dip"
            android:layout_height="28dip"
            android:layout_gravity="center"
            android:background="@drawable/aboutxida_icon_sn_style" />

        <TextView
            android:id="@+id/about_xida_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingTop="2dip"
            android:text="@string/about_xida"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_about_us_layout"
        android:layout_width="64dip"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/about_us_icon"
            android:layout_width="28dip"
            android:layout_height="28dip"
            android:layout_gravity="center"
            android:background="@drawable/about_us_icon_sn_style" />

        <TextView
            android:id="@+id/about_us_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingTop="2dip"
            android:text="@string/about_us"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>